--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 		<div id="sectionone">
 			<section id="twocolumn" class="clearfix">
 				<p id="slogan">hi, i'm gabe.</p>
-				<p id="brandstatement">Programmer, public-spirited visionary, innovator and collaborator. Fixer of problems and glue of the group. Diligent and quick-witted, I am always learning. Excited to build things from my mind into reality.</p>
+				<p id="brandstatement">Programmer, public-spirited visionary, innovator and collaborator. Problem solver and glue of the group. Diligent and quick-witted, I am always learning. Excited to build things from my mind into reality.</p>
 				<nav>
 					<a href="#headaboutme">about me</a>
 					<a href="#headskills">skills + experience</a>
@@ -96,7 +96,7 @@
 			<div id="aboutme" class="clearfix">
 				<div class="about-pic"></div>
 				<div id="firstcontent">
-					<p>IVF babe coneceived in NY. Born and raised in the suburbs of DC. I divide my time between laughing too loudly and petting strangers' dogs. Traveling means the world to me. I do not take myself seriously. And I hate incomplete</p>
+					<p>In vitro baby conceived in NY. Born and raised in the suburbs of DC. I divide my time between laughing too loudly and petting strangers' dogs. Traveling means the world to me. I do not take myself seriously. And I hate incomplete</p>
 				</div>
 			</div>
 			<div id="meagain" class="clearfix">
