--- a/index.html
+++ b/index.html
@@ -28,8 +28,6 @@
 		// initialize the map on the "map" div with a given center and zoom
 		var map = L.map('map').setView([40.7128, -74.0059], 10).addLayer(osm);
 
-
-
 		L.marker([10.2750, -84.8255]).addTo(map).bindPopup("Monteverde, Costa Rica");
 		L.marker([43.6532, -79.3832]).addTo(map).bindPopup("Toronto, Canada");
 		L.marker([59.3293, 18.0686]).addTo(map).bindPopup("Stockholm, Sweden");
@@ -96,7 +94,7 @@
 			<div id="aboutme" class="clearfix">
 				<div class="about-pic"></div>
 				<div id="firstcontent">
-					<p>In vitro baby conceived in NY. Born and raised in the suburbs of DC. I divide my time between laughing too loudly and petting strangers' dogs. Traveling means the world to me. I do not take myself seriously. And I hate incomplete</p>
+					<p>In vitro baby conceived in NY. Born and raised in the suburbs of DC. I divide my time between laughing too loudly and petting strangers' dogs. Traveling means the world to me. And I hate incomplete</p>
 				</div>
 			</div>
 			<div id="meagain" class="clearfix">
@@ -111,7 +109,7 @@
 			<div id="skills">
 				<div class="skills-pic"></div>
 				<div id="myskills">
-					<p>I am fluent in Java object oriented programming and have worked with several other programming langauges. While you're here, take a look at my <a href="docs/GabrielSniderResume1.pdf"><b>resume</b></a>.</p>
+					<p>I am fluent in Java object oriented programming and have worked with several other programming langauges. While you're here, take a look at my <a href="docs/GabrielSniderResume.pdf" download><b>resume</b></a>.</p>
 					</div>
 				</div>
 				<div id="moreskills">
