--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 			<div id="meagain" class="clearfix">
 				<div class="meagain-pic"></div>
 				<div id="contentme">
-					<p>Double major in computer science and awesomeness. Aspiring UX designer and dogfather. I have an eye for design and want to make the web a more user friendly place. I like reaching challenging heights and developing new skills. My desire is to be part of a tech team that pushes my limits and expands the notion of what is possibile. </p>
+					<p>Double major in computer science and awesomeness. Aspiring software developer and dogfather. I have an eye for design and want to make the web a more user friendly place. I like reaching challenging heights and developing new skills. My desire is to be part of a tech team that pushes my limits and expands the notion of what is possibile. </p>
 				</div>
 			</div>
 		</section>
